<resources>
    <string name="epubactivity_drm_info">DRM Info</string>
    <string name="epubactivity_set_bookmark">Add a bookmark</string>
    <string name="epubactivity_settings">User Settings</string>
    <string name="epubactivity_book_nav_options">Book navigation menu</string>
    <string name="epubactivity_read_aloud_start">Read Aloud</string>
    <string name="epubactivity_search">Search</string>
    <string name="title_fragment_drm_management">DRM Management</string>
    <string name="more_options">More Options</string>
    <string name="popup_delete_button">DELETE</string>
    <string name="catalog_list_more">More</string>
    <string name="catalog_detail_download_button">Download</string>
    <string name="drm_information_header">INFORMATION</string>
    <string name="drm_label_license_type">License Type</string>
    <string name="drm_label_state">State</string>
    <string name="drm_label_provider">Provider</string>
    <string name="drm_label_issued">Issued</string>
    <string name="drm_label_updated">Updated</string>
    <string name="drm_label_rights">RIGHTS</string>
    <string name="drm_label_prints_left">Prints left</string>
    <string name="drm_label_copies_left">Copies left</string>
    <string name="drm_label_start">Start</string>
    <string name="drm_label_end">End</string>
    <string name="drm_label_actions">ACTIONS</string>
    <string name="drm_label_renew">RENEW</string>
    <string name="drm_label_return">RETURN</string>
    <string name="zero">00:00</string>
    <string name="chapter_page">Chapter / Page</string>
    <string name="progression">Progression</string>
    <string name="timestamp">Timestamp</string>
    <string name="contents_tab_label">Contents</string>
    <string name="bookmarks_tab_label">Bookmarks</string>
    <string name="highlights_tab_label">Highlights</string>
    <string name="pagelist_tab_label">Page List</string>
    <string name="landmarks_tab_label">Landmarks</string>
    <string name="action_mode_menu_highlight">H.light</string>
    <string name="action_mode_menu_underline">Underline</string>
    <string name="action_mode_menu_note">Note</string>
    <string name="bookmark_added">Bookmark added</string>
    <string name="bookmark_exists">Bookmark already exists</string>
    <string name="title_catalogs">Catalogs</string>
    <string name="title_bookshelf">Bookshelf</string>
    <string name="title_about">About</string>
    <string name="cover_image">Cover Image</string>
    <string name="repfr">repfr</string>
    <string name="details">Details</string>
    <string name="close">Close</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_delete_book_title">Delete Book?</string>
    <string name="confirm_delete_book_text">Are you sure you want to delete this book? I will be also deleted from the cloud storage</string>
    <string name="confirm_delete_catalog_title">Delete Catalog?</string>
    <string name="confirm_delete_catalog_text">Are you sure you want to delete this Catalog feed?</string>
    <string name="add_book">Add a Book</string>
    <string name="add_catalog">Add an Catalog Feed</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="enter_title">Enter the Title</string>
    <string name="enter_url">Enter the URL</string>
    <string name="invalid_title">Please enter a title</string>
    <string name="invalid_url">Please enter a valid URL</string>
    <string name="catalog_parse_error">Error parsing Catalog feed. Please check the URL and try again</string>
    <string name="return_publication">This will return the publication</string>
    <string name="return_button">Return</string>
    <string name="opening_publication_cannot_render">Cannot render publication.</string>
    <string name="opening_publication_audio_engine_initialization">Could not open publication because audio engine initialization failed.</string>
    <string name="import_publication_unexpected_io_exception">Unable to add publication due to an unexpected error on your device</string>
    <string name="import_publication_download_failed">Publication download failed.</string>
    <string name="import_publication_no_acquisition">Acquisition is not possible.</string>
    <string name="import_publication_success">Publication added to your library</string>
    <string name="import_publication_unable_add_pub_database">Unable to add publication to the database</string>
    <string name="import_publication_inconsistent_state">Import failed because of exceptional conditions. Please try again.</string>
    <string name="publication_error_unsupported_asset">Asset format is not supported</string>
    <string name="publication_error_network_forbidden">Server denied access to a resource.</string>
    <string name="publication_error_network_not_found">A resource has not been found on the server.</string>
    <string name="publication_error_network_unreachable">Server cannot be reached.</string>
    <string name="publication_error_network_timeout">Server was too long to respond.</string>
    <string name="publication_error_network_ssl_handshake">A SSL error occurred.</string>
    <string name="publication_error_network_unexpected">An unexpected network error occurred.</string>
    <string name="publication_error_filesystem_not_found">A file has not been found.</string>
    <string name="publication_error_filesystem_forbidden">You are not allowed to access the file.</string>
    <string name="publication_error_filesystem_unexpected">An unexpected filesystem error occurred.</string>
    <string name="publication_error_filesystem_insufficient_space">There is not enough space left on the device.</string>
    <string name="publication_error_incorrect_credentials">Provided credentials were incorrect</string>
    <string name="publication_error_restricted">You are not allowed to open this publication</string>
    <string name="publication_error_out_of_memory">There is not enough memory on this device to open the publication.</string>
    <string name="publication_error_scheme_not_supported">Publication source is not supported.</string>
    <string name="publication_error_invalid_publication">Publication looks corrupted.</string>
    <string name="publication_error_unexpected">An unexpected error occurred.</string>
    <string name="lcp_error_license_interaction_not_available">This interaction is not available</string>
    <string name="lcp_error_license_profile_not_supported">This License has a profile identifier that this app cannot handle, the publication cannot be processed</string>
    <string name="lcp_error_crl_fetching">Can\'t retrieve the Certificate Revocation List</string>
    <string name="lcp_error_network">Network error</string>
    <string name="lcp_error_runtime">Unexpected LCP error</string>
    <string name="lcp_error_unknown">Unknown LCP error</string>
    <string name="lcp_error_license_status.cancelled">This license was cancelled on %1$s</string>
    <string name="lcp_error_license_status.returned">This license has been returned on %1$s</string>
    <string name="lcp_error_license_status.not_started">This license starts on %1$s</string>
    <string name="lcp_error_license_status.expired">This license expired on %1$s</string>
    <plurals name="lcp_error_license_status.revoked">
        <item quantity="one">This license was revoked by its provider on %1$s. It was registered by %2$d device.</item>
        <item quantity="other">This license was revoked by its provider on %1$s. It was registered by %2$d devices.</item>
    </plurals>
    <string name="lcp_error_renew.renew_failed">Your publication could not be renewed properly</string>
    <string name="lcp_error_renew.invalid_renewal_period">Incorrect renewal period, your publication could not be renewed</string>
    <string name="lcp_error_renew.unexpected_server_error">An unexpected error has occurred on the server</string>
    <string name="lcp_error_return.return_failed">Your publication could not be returned properly</string>
    <string name="lcp_error_return.already_returned_or_expired">Your publication has already been returned before or is expired</string>
    <string name="lcp_error_return.unexpected_server_error">An unexpected error has occurred on the server</string>
    <string name="lcp_error_parsing">The JSON is not representing a valid document</string>
    <string name="lcp_error_parsing.malformed_json">The JSON is malformed and can\'t be parsed</string>
    <string name="lcp_error_parsing.license_document">The JSON is not representing a valid License Document</string>
    <string name="lcp_error_parsing.status_document">The JSON is not representing a valid Status Document</string>
    <string name="lcp_error_container.open_failed">Can\'t open the license container</string>
    <string name="lcp_error_container.file_not_found">License not found in container</string>
    <string name="lcp_error_container.read_failed">Can\'t read license from container</string>
    <string name="lcp_error_container.write_failed">Can\'t write license in container</string>
    <string name="lcp_error_license_integrity.certificate_revoked">Certificate has been revoked in the CRL</string>
    <string name="lcp_error_license_integrity.invalid_certificate_signature">Certificate has not been signed by CA</string>
    <string name="lcp_error_license_integrity.invalid_license_signature_date">License has been issued by an expired certificate</string>
    <string name="lcp_error_license_integrity.invalid_license_signature">License signature does not match</string>
    <string name="lcp_error_license_integrity.invalid_user_key_check">User key check invalid</string>
    <string name="lcp_error_decryption.content_key_decrypt_error">Unable to decrypt encrypted content key from user key</string>
    <string name="lcp_error_decryption.content_decrypt_error">Unable to decrypt encrypted content from content key</string>
    <string name="missing_lcp_support">The application was compiled without LCP support.</string>
    <string name="reader_error">Error</string>
    <string name="opening_error">Could not open publication</string>
    <string name="import_error">Import error</string>
    <string name="failed_parsing_catalog">Failed parsing Catalog</string>
    <string name="no_result">No result</string>
    <string name="note">Note</string>
    <string name="add_a_note">Add a note</string>
    <string name="add_an_annotation">Add an annotation</string>
    <string name="delete_highlight_or_annotation">Delete highlight or annotation</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="red">Red</string>
    <string name="purple">Purple</string>
    <string name="seek_bar">Seek bar</string>
    <string name="go_backward_30_seconds">Go backward 30 seconds</string>
    <string name="play_or_pause">Play or pause</string>
    <string name="change_password">Change Password</string>
    <string name="welcome">Welcome</string>
    <string name="logout">Log out</string>
    <string name="register">Register</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="new_password2">Re-enter new password</string>
    <string name="confirm">Confirm</string>
    <string name="title_login">Log In</string>
    <string name="title_user">User Profile</string>
    <string name="title_changepwd">Change Password</string>
    <string name="cloud_storage">Cloud Storage</string>
    <string name="change_language">Language</string>
    <string name="add_to_favorite">Add to favorites</string>
    <string name="delete_book">Delete book</string>
    <string name="upload_to_cloud">Upload to cloud</string>
    <string name="sync">Sync to cloud</string>
    <string name="summarize">Summarize this chapter</string>
</resources>