<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context='org.readium.r2.bookdy.com.example.bookdy.reader.BaseReaderFragment'>

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/epubactivity_search"
        android:visible="false"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:iconifiedByDefault="false"
        app:showAsAction="collapseActionView|always" />

    <item
        android:id="@+id/summarize"
        android:icon="@drawable/baseline_library_books_24"
        android:title="@string/summarize"
        android:visible="false"
        app:showAsAction="ifRoom"
        tools:ignore="MenuItemXMLLint" />

    <item
        android:id="@+id/sync"
        android:icon="@drawable/baseline_cloud_upload_24"
        android:title="@string/sync"
        android:visible="false"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/tts"
        android:icon="@drawable/ic_baseline_headphones_24"
        android:title="@string/epubactivity_read_aloud_start"
        android:visible="false"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction"/>


    <item
        android:id="@+id/bookmark"
        android:icon="@drawable/ic_baseline_bookmark_24"
        android:title="@string/epubactivity_set_bookmark"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction"/>

    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_outline_format_size_24"
        android:visible="false"
        android:title="@string/epubactivity_settings"
        app:showAsAction="ifRoom"
        tools:ignore="AlwaysShowAction"/>

    <item
        android:id="@+id/toc"
        android:icon="@drawable/ic_outline_menu_24"
        android:title="@string/epubactivity_book_nav_options"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction"/>
</menu>