<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="20dp">

    <LinearLayout
        android:id="@+id/lnUserInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="top|center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/name"
            tools:text="Username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="top|center"
        android:layout_below="@id/lnUserInfo">
        <com.google.android.material.divider.MaterialDivider
            android:layout_marginTop="140dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginTop="5dp"
            android:id="@+id/cloud"
            android:text="@string/cloud_storage"
            android:textSize="22sp"
            android:textAlignment="textEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <com.google.android.material.divider.MaterialDivider
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginTop="5dp"
            android:id="@+id/language"
            android:text="@string/change_language"
            android:textSize="22sp"
            android:textAlignment="textEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <com.google.android.material.divider.MaterialDivider
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/logout"
        android:layout_marginBottom="10dp"
        android:text="@string/change_password" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:backgroundTint="#F44336"
        android:text="@string/logout" />

</RelativeLayout>