<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/user"
    app:startDestination="@+id/navigation_login">

    <fragment
        android:id="@+id/navigation_login"
        android:name="com.example.bookdy.login.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_navigation_login_to_navigation_user"
            app:destination="@id/navigation_user" />
        <action
            android:id="@+id/action_navigation_login_to_navigation_register"
            app:destination="@id/navigation_register" />
    </fragment>
    <fragment
        android:id="@+id/navigation_user"
        android:name="com.example.bookdy.login.UserFragment"
        android:label="@string/title_user"
        tools:layout="@layout/fragment_user" >
        <action
            android:id="@+id/action_navigation_user_to_navigation_changepwd"
            app:destination="@id/navigation_changepwd" />
        <action
            android:id="@+id/action_navigation_user_to_navigation_login"
            app:destination="@id/navigation_login" />
        <action
            android:id="@+id/action_navigation_user_to_cloudFragment"
            app:destination="@id/cloudFragment" />
    </fragment>
    <fragment
        android:id="@+id/navigation_changepwd"
        android:name="com.example.bookdy.login.ChangePasswordFragment"
        android:label="@string/title_changepwd"
        tools:layout="@layout/fragment_change_password" >
        <action
            android:id="@+id/action_navigation_changepwd_to_navigation_user"
            app:destination="@id/navigation_user" />
    </fragment>
    <fragment
        android:id="@+id/navigation_register"
        android:name="com.example.bookdy.login.RegisterFragment"
        android:label="@string/register"
        tools:layout="@layout/fragment_register" >
        <action
            android:id="@+id/action_navigation_register_to_navigation_login"
            app:destination="@id/navigation_login" />
    </fragment>
    <fragment
        android:id="@+id/cloudFragment"
        android:name="com.example.bookdy.login.CloudFragment"
        android:label="fragment_cloud"
        tools:layout="@layout/fragment_cloud" />

</navigation>