<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/upload"
        android:textSize="20sp"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:text="@string/upload_to_cloud"
        android:textAlignment="center"
        android:layout_height="wrap_content"/>
    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/add_book_fab"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:text="@string/add_to_favorite"
        android:layout_height="wrap_content"/>
    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/delete_book"
        android:textSize="20sp"
        android:textAlignment="center"
        android:text="@string/delete_book"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>